--- a/playbooks/check-status.yml
+++ b/playbooks/check-status.yml
@@ -1,11 +1,10 @@
 # check-status.yml
 ---
-  - hosts: webservers:loadbalancer
-    become: true
-    tasks:
-      - name: Check status of apache
-        #command: service httpd status
-        #service: name=httpd
-        shell: 
-          cmd: service httpd status
-          warn: False
+- name: Services Status
+  hosts: webserver:loadbalancer
+  become: true
+  tasks:
+  - name: Check status of apache
+    shell:
+      cmd: service httpd status
+      warn: False
